// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DumbPasswordForm /> enables the submit button when touched and not submitting 1`] = `
<form
  onSubmit={[Function]}
>
  <Field
    component={[Function]}
    fullWidth={true}
    label="Huidig wachtwoord"
    name="currentPassword"
    type="password"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Nieuw wachtwoord"
    name="newPassword"
    type="password"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Herhaal nieuw wachtwoord"
    name="newPasswordConfirmation"
    type="password"
  />
  <RaisedButton
    disabled={false}
    fullWidth={true}
    label="Wijzig wachtwoord"
    labelPosition="after"
    primary={true}
    secondary={false}
    type="submit"
  />
</form>
`;

exports[`<DumbPasswordForm /> renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <Field
    component={[Function]}
    fullWidth={true}
    label="Huidig wachtwoord"
    name="currentPassword"
    type="password"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Nieuw wachtwoord"
    name="newPassword"
    type="password"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Herhaal nieuw wachtwoord"
    name="newPasswordConfirmation"
    type="password"
  />
  <RaisedButton
    disabled={true}
    fullWidth={true}
    label="Wijzig wachtwoord"
    labelPosition="after"
    primary={true}
    secondary={false}
    type="submit"
  />
</form>
`;

exports[`<DumbPasswordForm /> renders errors 1`] = `
<form
  onSubmit={[Function]}
>
  <Alert
    message="Error"
    type="error"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Huidig wachtwoord"
    name="currentPassword"
    type="password"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Nieuw wachtwoord"
    name="newPassword"
    type="password"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Herhaal nieuw wachtwoord"
    name="newPasswordConfirmation"
    type="password"
  />
  <RaisedButton
    disabled={true}
    fullWidth={true}
    label="Wijzig wachtwoord"
    labelPosition="after"
    primary={true}
    secondary={false}
    type="submit"
  />
</form>
`;
